--- a/MobileApp/MobileApp/MobileApp/Views/ProductPage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/ProductPage.xaml
@@ -1,12 +1,12 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:data="clr-namespace:MobileApp.Data" 
              xmlns:controls="clr-namespace:MobileApp.Models"
              x:Class="MobileApp.Views.ProductPage">
-  <ContentView.Content>
-      <StackLayout>
-          <Label Text="Product page!" TextColor="Black"/>
+    <ContentPage.Content>
+        <StackLayout>
+            <Label Text="Product page!" TextColor="Black"/>
             <Shell.SearchHandler>
                 <controls:ProductSearchHandler
                     Placeholder="Enter search term"
@@ -14,17 +14,30 @@
                                       DisplayMemberName="Name">
                 </controls:ProductSearchHandler>
             </Shell.SearchHandler>
-      </StackLayout>
-    </ContentView.Content>
+        </StackLayout>
+    </ContentPage.Content>
     <ScrollView>
         <StackLayout Margin="20">
-            <Label Text="{Binding Name}" 
+            <Label Text="{Binding Name}"
                    HorizontalOptions="Center" 
-                   Style="{DynamicResource TitleStyle}" />
-            <Label Text="{Binding Description}" 
-                   Style="{DynamicResource BodyStyle}" />
-            <Label Text="{Binding Price}" 
-                   Style="{DynamicResource BodyStyle}" />
+                   Style="{DynamicResource TitleStyle}" TextColor="Black" />
+            <Label Text="{Binding Description}"
+                   Style="{DynamicResource BodyStyle}" TextColor="Black"/>
+            <Label Text="{Binding Price}"
+                   Style="{DynamicResource BodyStyle}" TextColor="Black"/>
         </StackLayout>
     </ScrollView>
-</ContentView>
+</ContentPage>
+
+<!--<?xml version="1.0" encoding="utf-8" ?>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="MobileApp.Views.ProductPage">
+    <ContentPage.Content>
+        <StackLayout>
+            <Label Text="Welcome to Xamarin.Forms!"
+                VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand" />
+        </StackLayout>
+    </ContentPage.Content>
+</ContentPage>-->
