Added scroll view to homepage content

--- a/MobileApp/MobileApp/MobileApp/Views/HomePage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/HomePage.xaml
@@ -38,11 +38,7 @@
     </Shell.TitleView>-->
         
 
-    <Shell.TitleView>
-        <Image Source="xamarin_logo.png"
-               HorizontalOptions="Center"
-               VerticalOptions="Center" />
-    </Shell.TitleView>
+    
     <Shell.SearchHandler>
         <controls:ProductSearchHandler
             Placeholder="Enter search term"
@@ -50,73 +46,67 @@
                      DisplayMemberName="Name">
         </controls:ProductSearchHandler>
     </Shell.SearchHandler>
+    <Shell.TitleView>
+        <Image Source="icon_about.png.png"
+               HorizontalOptions="Center"
+               VerticalOptions="Center" WidthRequest="50" HeightRequest="50"/>
+    </Shell.TitleView>
+    <!--<Shell.TabBarIsVisible Shell.TabBarIsVisible="True"/>-->
 
-
-    <!--<ContentPage.Content>
+    <ScrollView>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" TextColor="Black"/>
+            <Label Text="Recomended Products" FontSize="Large" TextColor="Black" FontAttributes="Bold"/>
+            <!--Carousel -> itemSource is list of all products change to recomeneded product list-->
+            <CarouselView ItemsSource="{x:Static data:ProductData.Products}"
+                          PeekAreaInsets="100"
+                          IndicatorView="indicatorview"
+                          HeightRequest="230">
+                    <CarouselView.ItemTemplate>
+                    <DataTemplate >
+                        <StackLayout >
+                            <Frame HasShadow="True"
+                                   BorderColor="DarkGray"
+                                   CornerRadius="5"
+                                   Margin="2"
+                                   HeightRequest="200"
+                                   WidthRequest="250">
+                                <StackLayout Margin="0">
+                                    <Image Source="{Binding ImageUrl}" 
+                                           Aspect="AspectFill"
+                                           HeightRequest="100"
+                                           WidthRequest="250"
+                                           VerticalOptions="Start"
+                                           HorizontalOptions="Center" />
+                                    <Label Text="{Binding Name}" 
+                                           FontAttributes="Bold"
+                                           FontSize="Large"
+                                           HorizontalOptions="Center"
+                                           VerticalOptions="Center" TextColor="Black"/>
+                                    <Label Text="{Binding Description}"
+                                           HorizontalOptions="Center" TextColor="Black"/>
+                                    <Label Text="{Binding Price}"
+                                           FontAttributes="Italic"
+                                           HorizontalOptions="Center"
+                                           MaxLines="5"
+                                           LineBreakMode="TailTruncation" TextColor="Black"/>
+                                </StackLayout>
+                            </Frame>
+                        </StackLayout>
+                    </DataTemplate>
+                </CarouselView.ItemTemplate>
+            </CarouselView>
+            <IndicatorView
+                x:Name="indicatorview"
+                IndicatorColor="LightGray"
+                IndicatorSize="10"
+                SelectedIndicatorColor="Black" />
+            <Label Text="You might like" FontSize="Large" TextColor="Black" FontAttributes="Bold"/>
+            <!--collection of all items in product array-->
+            <CollectionView Margin="1"
+                        ItemsSource="{x:Static data:ProductData.Products}"
+                        ItemTemplate="{StaticResource ProductTemplate}"
+                        SelectionMode="Single"
+                        SelectionChanged="OnCollectionViewSelectionChanged"/>
         </StackLayout>
-    </ContentPage.Content>-->
-
-
-    <StackLayout>
-        <Label Text="Recomended Products" FontSize="Large" TextColor="Black" FontAttributes="Bold"/>
-        <!--Carousel-->
-        <CarouselView ItemsSource="{x:Static data:ProductData.Products}"
-                      PeekAreaInsets="100"
-                      IndicatorView="indicatorview"
-                      HeightRequest="400">
-            <CarouselView.ItemTemplate>
-                <DataTemplate >
-                    <StackLayout>
-                        <Frame HasShadow="True"
-                               BorderColor="DarkGray"
-                               CornerRadius="5"
-                               Margin="2"
-                               HeightRequest="200"
-                               WidthRequest="250"
-                               
-                               >
-                            <StackLayout Margin="0">
-                                <Image Source="{Binding ImageUrl}" 
-                                       Aspect="AspectFill"
-                                       HeightRequest="100"
-                                       WidthRequest="250"
-                                       VerticalOptions="Start"
-                                       HorizontalOptions="Center" />
-                                <Label Text="{Binding Name}" 
-                                       FontAttributes="Bold"
-                                       FontSize="Large"
-                                       HorizontalOptions="Center"
-                                       VerticalOptions="Center" TextColor="Black"/>
-                                <Label Text="{Binding Description}"
-                                       HorizontalOptions="Center" TextColor="Black"/>
-                                <Label Text="{Binding Price}"
-                                       FontAttributes="Italic"
-                                       HorizontalOptions="Center"
-                                       MaxLines="5"
-                                       LineBreakMode="TailTruncation" TextColor="Black"/>
-                            </StackLayout>
-                        </Frame>
-                    </StackLayout>
-                </DataTemplate>
-            </CarouselView.ItemTemplate>
-        </CarouselView>
-        <IndicatorView
-            x:Name="indicatorview"
-            IndicatorColor="LightGray"
-            IndicatorSize="10"
-            VerticalOptions="Start"
-            SelectedIndicatorColor="Black" />
-        <Label Text="You might like" FontSize="Large" TextColor="Black" FontAttributes="Bold"/>
-        <!--collection of all items in product array-->
-        <CollectionView Margin="1"
-                    ItemsSource="{x:Static data:ProductData.Products}"
-                    ItemTemplate="{StaticResource ProductTemplate}"
-                    SelectionMode="Single"
-                    SelectionChanged="OnCollectionViewSelectionChanged"/>
-    </StackLayout>
-
+    </ScrollView>
 </ContentPage>
