--- a/MobileApp/MobileApp/MobileApp/AppShell.xaml
+++ b/MobileApp/MobileApp/MobileApp/AppShell.xaml
@@ -91,6 +91,10 @@
     </FlyoutItem>-->
 
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
+    <!--<MenuItem Text="UserDetials" StyleClass="MenuItemLayoutStyle" Clicked="MenuItem_Clicked">
+    </MenuItem>-->
+    <MenuItem Text="UserDetails" StyleClass="MenuItemLayoutStyle" Clicked="MenuItem_Clicked">
+    </MenuItem>
     <MenuItem Text="Logout" StyleClass="MenuItemLayoutStyle" Clicked="OnMenuItemClicked">
     </MenuItem>
 
