--- a/MobileApp/MobileApp/MobileApp/Views/HomePage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/HomePage.xaml
@@ -32,10 +32,6 @@
     <ContentPage.BindingContext>
         <vm:HomeViewModel/>
     </ContentPage.BindingContext>
-    <!--<Shell.TitleView>
-        <Label Text="Test" FontSize="30" VerticalOptions="Center" HorizontalOptions="Fill"/>
-
-    </Shell.TitleView>-->
         
 
     
@@ -54,20 +50,21 @@
     <!--<Shell.TabBarIsVisible Shell.TabBarIsVisible="True"/>-->
 
     <ScrollView>
-        <StackLayout>
-            <Label Text="Recomended Products" FontSize="Large" TextColor="Black" FontAttributes="Bold"/>
+        <StackLayout Margin="10">
+            <Label Text="Recomended Products" CharacterSpacing="0.5" FontSize="Large" TextColor="Black" FontAttributes="Bold"/>
             <!--Carousel -> itemSource is list of all products change to recomeneded product list-->
             <CarouselView ItemsSource="{x:Static data:ProductData.Products}"
+                          Margin="0,5,0,0"
                           PeekAreaInsets="100"
                           IndicatorView="indicatorview"
                           HeightRequest="230">
                     <CarouselView.ItemTemplate>
-                    <DataTemplate >
-                        <StackLayout >
+                    <DataTemplate>
+                        <StackLayout>
                             <Frame HasShadow="True"
-                                   BorderColor="DarkGray"
+                                   BorderColor="LightGray"
                                    CornerRadius="5"
-                                   Margin="2"
+                                   Margin="4,2"
                                    HeightRequest="200"
                                    WidthRequest="250">
                                 <StackLayout Margin="0">
@@ -84,13 +81,16 @@
                                            VerticalOptions="Center" TextColor="Black"/>
                                     <Label Text="{Binding Description}"
                                            HorizontalOptions="Center" TextColor="Black"/>
-                                    <!--#todo make price centered in card-->
-                                    <FlexLayout HorizontalOptions="Center">
-                                        <Label Text="Price: £" TextColor="Black" HorizontalOptions="Center"/>
+
+                                    <FlexLayout HorizontalOptions="Center" JustifyContent="Center">
+                                        <Label Text="Price: £"
+                                                FontSize="16"
+                                                TextColor="Black"/>
                                         <Label Text="{Binding Price}"
-                                           MaxLines="5"
-                                           LineBreakMode="TailTruncation" 
-                                               HorizontalOptions="Center" TextColor="Black"/>
+                                                MaxLines="5"
+                                                LineBreakMode="TailTruncation"
+                                                FontSize="16"
+                                                TextColor="Black"/>
                                     </FlexLayout>
 
                                 </StackLayout>
@@ -101,16 +101,23 @@
             </CarouselView>
             <IndicatorView
                 x:Name="indicatorview"
+                Margin="0,10,0,0"
                 IndicatorColor="LightGray"
                 IndicatorSize="10"
                 SelectedIndicatorColor="Black" />
-            <Label Text="You might like" FontSize="Large" TextColor="Black" FontAttributes="Bold"/>
+
+            <!-- separator line -->
+            <BoxView Style="{StaticResource SeparatorLineStyle}" Margin="15,25,15,10"/>
+
+            <Label Text="You might like" FontSize="Large" CharacterSpacing="0.5" TextColor="Black" FontAttributes="Bold"/>
             <!--collection of all items in product array-->
             <CollectionView Margin="1"
-                        ItemsSource="{x:Static data:ProductData.Products}"
-                        ItemTemplate="{StaticResource ProductTemplate}"
-                        SelectionMode="Single"
-                        SelectionChanged="OnCollectionViewSelectionChanged"/>
+                            BackgroundColor="#f7f7f7"
+                            ItemsLayout="VerticalList"
+                            ItemsSource="{x:Static data:ProductData.Products}"
+                            ItemTemplate="{StaticResource ProductTemplate}"
+                            SelectionMode="Single"
+                            SelectionChanged="OnCollectionViewSelectionChanged"/>
         </StackLayout>
     </ScrollView>
 </ContentPage>
