--- a/MobileApp/MobileApp/MobileApp/Views/ProductPage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/ProductPage.xaml
@@ -36,7 +36,9 @@
                 <Label Text="{Binding Name}"
                        HorizontalOptions="Start" 
                        FontSize="Title" FontAttributes="Bold" TextColor="Black" />
-                <Image Source="{Binding ImageUrl}" 
+
+                <Image Source="{Binding ImageUrl}"
+                       Margin="0,5,0,10"
                    HeightRequest="200" 
                    WidthRequest="500" 
                    HorizontalOptions="CenterAndExpand" />
@@ -49,10 +51,14 @@
                 <Label Text="Description" TextColor="Black" FontSize="Medium"/>
                 <Label Text= "{Binding Description}"
                        Style="{DynamicResource BodyStyle}" TextColor="Black"/>
-                <Grid RowDefinitions="50" ColumnDefinitions="*, *">
-                    <Button Text="Buy Now!" Grid.Column="0" Grid.Row="0"/>
-                    <Button Text="Add To Basket" Grid.Column="1" Grid.Row="0"/>
+                <Grid RowDefinitions="50" ColumnDefinitions="*, *" Margin="0,10,0,10">
+                    <Button Text="Buy Now!" Grid.Column="0" Grid.Row="0" Command="{Binding BuyNowCmd}"/>
+                    <Button Text="Add To Basket" Grid.Column="1" Grid.Row="0" Command="{Binding AddToBasketCmd}"/>
                 </Grid>
+
+                <!-- separator line -->
+                <BoxView Style="{StaticResource SeparatorLineStyle}"/>
+
                 <Label Text="Reviews" TextColor="Black" FontSize="Medium"/>
                 <ScrollView>
                     <!--Reviews go here-->
