--- a/MobileApp/MobileApp/MobileApp/Views/HomePage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/HomePage.xaml
@@ -25,16 +25,12 @@
         </Style>
     </ContentPage.Resources>
 
-    
-
-
 
     <ContentPage.BindingContext>
         <vm:HomeViewModel/>
     </ContentPage.BindingContext>
-        
 
-    
+
     <Shell.SearchHandler>
         <controls:ProductSearchHandler
             Placeholder="Enter search term"
@@ -53,18 +49,20 @@
                                    HeightRequest="40"
                                    WidthRequest="40" />
                         <Label Grid.Column="1"
-                                   Text="{Binding Name}"
-                                   FontAttributes="Bold" />
+                               Text="{Binding Name}"
+                               FontAttributes="Bold" />
                     </Grid>
                 </DataTemplate>
             </controls:ProductSearchHandler.ItemTemplate>
         </controls:ProductSearchHandler>
     </Shell.SearchHandler>
-    <Shell.TitleView>
+    
+    
+    <!--<Shell.TitleView>
         <Image Source="icon_about.png.png"
                HorizontalOptions="Center"
                VerticalOptions="Center" WidthRequest="50" HeightRequest="50"/>
-    </Shell.TitleView>
+    </Shell.TitleView>-->
     <!--<Shell.TabBarIsVisible Shell.TabBarIsVisible="True"/>-->
 
     <ScrollView>
@@ -75,8 +73,9 @@
                           Margin="0,5,0,0"
                           PeekAreaInsets="100"
                           IndicatorView="indicatorview"
-                          HeightRequest="230">
-                    <CarouselView.ItemTemplate>
+                          HeightRequest="230"
+                          CurrentItem="OnCollectionViewSelectionChanged">
+                <CarouselView.ItemTemplate>
                     <DataTemplate>
                         <StackLayout>
                             <Frame HasShadow="True"
@@ -86,6 +85,11 @@
                                    HeightRequest="200"
                                    WidthRequest="250">
                                 <StackLayout Margin="0">
+                                    <StackLayout.GestureRecognizers>
+                                        <!--<TapGestureRecognizer Command="{Binding selectCarouselItem}" CommandParameter="{Binding Id}" />-->
+                                        <TapGestureRecognizer Tapped="CarouselItem_Tapped" />
+                                    </StackLayout.GestureRecognizers>
+                                    <Label Text="{Binding Id}" IsVisible="false" x:Name="ProductID"/>
                                     <Image Source="{Binding ImageUrl}" 
                                            Aspect="AspectFit"
                                            HeightRequest="100"
@@ -110,7 +114,6 @@
                                                 FontSize="16"
                                                 TextColor="Black"/>
                                     </FlexLayout>
-
                                 </StackLayout>
                             </Frame>
                         </StackLayout>
