--- a/MobileApp/MobileApp/MobileApp/Views/LoginPage.xaml
+++ b/MobileApp/MobileApp/MobileApp/Views/LoginPage.xaml
@@ -14,8 +14,8 @@
             <Button Text="Login" Command="{Binding SubmitCommand}"/>
             <!--<Label x:Name="messageLabel"/>-->
             <FlexLayout Wrap="Wrap" JustifyContent="SpaceAround">
-                <Button WidthRequest="185" Text="Register"/>
-                <Button WidthRequest="185" Text="Reset Password"/>
+                <Button WidthRequest="185" Text="Register" Clicked="GoToRegisterPage"/>
+                <Button WidthRequest="185" Text="Reset Password" Clicked="GoToResetPage"/>
             </FlexLayout>
         </StackLayout>
     </ContentPage.Content>
